[gd_scene load_steps=17 format=3 uid="uid://ba3xtfmksofnn"]

[ext_resource type="PackedScene" uid="uid://b5l7nm22qv6uc" path="res://Scenes/interaction_area.tscn" id="1_fk67m"]
[ext_resource type="Script" path="res://Scenes/dog.gd" id="1_ok3hn"]
[ext_resource type="Texture2D" uid="uid://db52fplqiaw7b" path="res://Sprites/Dog3.png" id="2_wwthl"]
[ext_resource type="PackedScene" uid="uid://btvyfgy15e8nn" path="res://Scenes/dog_ui.tscn" id="3_m25ik"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tp6ql"]
radius = 32.0156

[sub_resource type="CircleShape2D" id="CircleShape2D_6wljd"]
radius = 32.0156

[sub_resource type="AtlasTexture" id="AtlasTexture_8d13v"]
atlas = ExtResource("2_wwthl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcbs0"]
atlas = ExtResource("2_wwthl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nc14"]
atlas = ExtResource("2_wwthl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cccrj"]
atlas = ExtResource("2_wwthl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kjn0"]
atlas = ExtResource("2_wwthl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hpp1"]
atlas = ExtResource("2_wwthl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6twjm"]
atlas = ExtResource("2_wwthl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tf4xp"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_8d13v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcbs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nc14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cccrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kjn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hpp1")
}],
"loop": false,
"name": &"eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6twjm")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8yd77"]
atlas = ExtResource("2_wwthl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_m204x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yd77")
}],
"loop": true,
"name": &"rest",
"speed": 5.0
}]

[node name="Dog" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ok3hn")

[node name="InteractionArea" parent="." instance=ExtResource("1_fk67m")]
action_name = "feed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-12, 0)
shape = SubResource("CircleShape2D_tp6ql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-12, 0)
shape = SubResource("CircleShape2D_6wljd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dog_UI" parent="CanvasLayer" instance=ExtResource("3_m25ik")]

[node name="Head" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tf4xp")
animation = &"eat"
autoplay = "sleep"
frame = 5
frame_progress = 1.0

[node name="Tail" type="AnimatedSprite2D" parent="."]
position = Vector2(32, 0)
sprite_frames = SubResource("SpriteFrames_m204x")
animation = &"rest"

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Head" to="." method="_on_head_animation_finished"]
